scarab theme update: fix some spacing

--- a/css/scarab.css
+++ b/css/scarab.css
@@ -68,7 +68,7 @@ h1.post-title {
   font-size: 3rem;
   margin-bottom: .9em;
 }
-div.post-metadata {
+.blog-post div.post-metadata {
   margin-bottom: 2.5rem;
 }
 
